# shoe

./: Copyright.txt  readme.md
CMake/: OptionSHOE.cmake
Common/: vtkShoeAttribute.cxx  vtkShoeAttribute.h  vtkShoeBox.cxx  vtkShoeBox.h  vtkShoeBoxIsosurfaceSubdivision.cxx  vtkShoeBoxIsosurfaceSubdivision.h  vtkShoeBoxP.h  vtkShoeBoxPartition.cxx  vtkShoeBoxPartition.h  vtkShoeBoxPartitionIterator.cxx  vtkShoeBoxPartitionIterator.h  vtkShoeCell.cxx  vtkShoeCell.h  vtkShoeCellGenus.h  vtkShoeCellIterator.cxx  vtkShoeCellIterator.h  vtkShoeCellMetaData.cxx  vtkShoeCellMetaData.h  vtkShoeCellRecord.cxx  vtkShoeCellRecord.h  vtkShoeCellSpecies.cxx  vtkShoeCellSpecies.h  vtkShoeCellType.h  vtkShoeEnums.h  vtkShoeMesh.cxx  vtkShoeMesh.h  vtkShoeMeshChordLengthSubdivision.cxx  vtkShoeMeshChordLengthSubdivision.h  vtkShoeMeshFieldValueSubdivision.cxx  vtkShoeMeshFieldValueSubdivision.h  vtkShoeMeshIterator.cxx  vtkShoeMeshIterator.h  vtkShoeMeshNoSubdivision.cxx  vtkShoeMeshNoSubdivision.h  vtkShoeMeshSubdivisionAlgorithm.cxx  vtkShoeMeshSubdivisionAlgorithm.h  vtkShoeMeshViewDependentSubdivision.cxx  vtkShoeMeshViewDependentSubdivision.h  vtkShoeOrderTuple.h  vtkShoePointIterator.cxx  (+1 more)
Common/Elements/: CMakeLists.txt  CellOpsSpecifications.txt  CriticalPoints.cxx  CriticalPoints.h  Curve.cxx  Curve.h  GenCellOps.py  Generic.cxx  Generic.h  Hexahedron.cxx  Hexahedron.h  Point.cxx  Point.h  Quadrilateral.cxx  Quadrilateral.h  ShapeFunctions.cxx  ShapeFunctions.h  ShapeFunctionsImpl.h  ShoeHexahedron.cxx  ShoeHexahedron.h  ShoeInterpolants.cxx  ShoeInterpolants.h  ShoeInterpolants.py  Tetrahedron.cxx  Tetrahedron.h  Triangle.cxx  Triangle.h  Tube.h  VelhoFunctions.cxx  VelhoFunctions.h  vtksnlShoeElementsInit.cxx
Common/Testing/Cxx/: ShoeAttribute.cxx  ShoeBox.cxx  ShoeBoxPartition.cxx
Examples/Cxx/SHOE/: CMakeLists.txt  benchmarkTessellators.cxx  s3dViz.cxx  tessellatorQuality.cxx  vtkFlowerSubdivision.cxx  vtkFlowerSubdivision.h  vtkLissajousSubdivision.cxx  vtkLissajousSubdivision.h  vtkToySubdivision.cxx  vtkToySubdivision.h
Filtering/: vtkShoeBoxAlgorithm.cxx  vtkShoeBoxAlgorithm.h  vtkShoeMeshSource.cxx  vtkShoeMeshSource.h  vtkShoeMeshToShoeMeshFilter.cxx  vtkShoeMeshToShoeMeshFilter.h  vtkShoeMeshToUnstructuredGridFilter.cxx  vtkShoeMeshToUnstructuredGridFilter.h
Graphics/: vtkShoeBoxContourFilter.cxx  vtkShoeBoxContourFilter.h  vtkShoeMeshContourFilter.cxx  vtkShoeMeshContourFilter.h  vtkShoeMeshFacetFilter.cxx  vtkShoeMeshFacetFilter.h  vtkShoeMeshPolygonizer.cxx  vtkShoeMeshPolygonizer.h
Graphics/Testing/Cxx/: ShoeBoxCubicContours.cxx  ShoeBoxQuadricContours.cxx  ShoeBoxSexticContours.cxx
IO/: vtkShoeBoxReader.cxx  vtkShoeBoxReader.h  vtkXMLShoeMeshReader.cxx  vtkXMLShoeMeshReader.h  vtkXMLShoeMeshWriter.cxx  vtkXMLShoeMeshWriter.h
IO/Testing/Cxx/: ShoeBoxReader.cxx
docs/: SHOE.txt
